# nix_simulator

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  nix_simulator.rosinstall  package.xml
config/: rosconsole.conf  twist_mux_locks.yaml  twist_mux_topics.yaml
include/nix_simulator/: SimpleTrackedVehiclePluginROS.hh  TrackedVehiclePluginROS.hh
launch/: amcl.launch  behavior_tree.launch  create_2d_map.launch  empty_world.launch  frames.launch  nix_world.launch  nix_world_mapping.launch  nix_world_only.launch  octomap_server.launch  teleop.launch
models/dense_fog_generator/: model.config  model.sdf
models/fog_generator/: model.sdf
models/industrial_plant/: model.config  model.sdf
models/jersey_barrier_3_4/: model.sdf
models/jersey_barrier_small/: model.sdf
models/mockup_nix/: metadata.pbtxt  model.config  model.sdf
models/nix/: model.config  nix.sdf
models/nix_tower/: model.config  nix_tower.sdf
models/raposaNG/: model.config  raposaNG.sdf
models/sensors/hrw_radar/: model.config  model.sdf
models/sensors/pico_flexx/: model.config  pico_flexx.sdf
models/sensors/velodyne_hdl32/: model.sdf
models/sensors/wide_lens_camera/: model.config  wide_lens_camera.sdf
resources/maps/industrial_plant/: map.pgm  map.yaml
resources/maps/upo_basement/: map.pgm  map.yaml
scripts/: download_mesh.sh  duplicate_sensors.sh  get_maps.sh  industrial_plant.sh  install.bash  tf_to_pose.py  updateDepends.sh  upo_basement.sh
src/: SimpleTrackedVehiclePluginROS.cc  TrackedVehiclePluginROS.cc  ground_truth_pose_publisher.cpp
viz/: basic_sensors.rviz  localization.rviz  mapping.rviz  navigation.rviz
worlds/: empty.world  industrial_plant.world  multi_ramps.world  multi_sensors.world  nix_cave.world  nix_large_scenario.world  nix_large_scenario_no_fog.world  nix_ramp.world  nix_ramp_obscure.world  simple_fog.world  upo_basement.world  upo_basement_fog_1.world
worlds/cave/: simple_urban_01.sdf
